# gcp-recommendation-sample

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-data_preparation.ipynb
